[DOR-299] Wrap response text to prevent overflowing

--- a/app/assets/stylesheets/components/_receipt.scss
+++ b/app/assets/stylesheets/components/_receipt.scss
@@ -68,6 +68,7 @@
 }
 
 .receipt__file-list,
-.receipt__case-ref {
+.receipt__case-ref,
+.receipt__message {
   word-break: break-all;
 }
